fixed scroll to top issue on smallest form factor

--- a/src/components/Hero/style.css
+++ b/src/components/Hero/style.css
@@ -7,20 +7,17 @@
 
 @media (min-width: 768px) and (max-width: 991px) {
   #hero {
-    padding: 0px;
+    padding: 4px;
   }
 }
 
 @media (max-width: 767px) {
   #hero {
-    padding: 4px;
+    /* note: any padding on top cause issue with scroll to top */
+    /* it causes scroll to go to top of viewport and thus dive */
+    /* under the fixed header - need to investigate why */
+    padding: 0px 4px 4px 4px;
   }
 
-  .hero-msg-1 {
-    position: absolute;
-    top: -40px;
-    left: 0px;
-    font-size: 10px;
-  }
 
 }
